--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,11 +1,12 @@
 site_name: CCPP Documentation
 site_url: https://jira.ucar.edu/secure/RapidBoard.jspa?rapidView=220&projectKey=CCPP
 site_description: Documentation for the CISL Cloud Pilot Program
-repo_url: https://github.com/NicholasCote/NCAR-viz
+repo_url: https://github.com/NCAR/cisl-cloud
 nav:
   - Home: index.md
   - About: about.md
   - Features: features.md
   - Layout: layout.md
   - Services: services.md
-theme: readthedocs
+theme: 
+  name: readthedocs
