--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -10,5 +10,6 @@ nav:
   - Services: services.md
 theme: 
   name: readthedocs
-  logo: 'images/ncar-cisl.png'
+  logo: 'images/ncar-cisl-white.png'
+  favicon: 'images/ncar-favicon.png'
 
