add bundle install

--- a/jekyll-docs/Dockerfile
+++ b/jekyll-docs/Dockerfile
@@ -5,19 +5,16 @@ RUN apt-get update && apt-get install -y --no-install-recommends \
     git \
     && rm -rf /var/lib/apt/lists/*
 
-# used in the jekyll-server image, which is FROM this image
-COPY docker-entrypoint.sh /usr/local/bin/
 RUN git clone https://github.com/NicholasCote/CCPPdocs.git
-WORKDIR /ccpp-docs/jekyll-docs
+WORKDIR /CCPPdocs/jekyll-docs
 
 RUN gem update --system && gem install jekyll && gem cleanup
 
 EXPOSE 4000
-ENTRYPOINT [ "jekyll" ]
-
-CMD [ "--help" ]
 FROM jekyll as jekyll-serve
 
+WORKDIR /CCPPdocs/jekyll-docs
 
-ENTRYPOINT ["docker-entrypoint.sh"]
+CMD ["bundle", "install"]
+
 CMD ["bundle", "exec", "jekyll", "serve"]
