--- a/jekyll-docs/Gemfile
+++ b/jekyll-docs/Gemfile
@@ -8,7 +8,7 @@ source "https://rubygems.org"
 #
 # This will help ensure the proper Jekyll version is running.
 # Happy Jekylling!
-gem "rb-fsevent", "~> 0.11.2"
+gem "rb-fsevent", ">= 0.10.3, ~> 0.10"
 
 gem "jekyll", "~> 4.2.0"
 
@@ -31,5 +31,3 @@ gem "tzinfo-data", platforms: [:mingw, :mswin, :x64_mingw, :jruby]
 # Performance-booster for watching directories on Windows
 gem "wdm", "~> 0.1.0" if Gem.win_platform?
 gem "webrick", "~> 1.8"
-
-
