--- a/jekyll-docs/Gemfile
+++ b/jekyll-docs/Gemfile
@@ -8,7 +8,7 @@ source "https://rubygems.org"
 #
 # This will help ensure the proper Jekyll version is running.
 # Happy Jekylling!
-gem "rb-fsevent", ">= 0.10.3, ~> 0.10"
+gem "rb-fsevent", "~> 0.10"
 
 gem "jekyll", "~> 4.2.0"
 
