--- a/jekyll-docs/_config.yml
+++ b/jekyll-docs/_config.yml
@@ -14,7 +14,7 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 title: CISL Cloud Pilot Project
-email: ncote@ucar.edu
+email: cisl-on-prem-cloud@ucar.edu
 description: >- # this means to ignore newlines until "baseurl:"
   This is the project website for the CISL Cloud Pilot.
 baseurl: "" # the subpath of your site, e.g. /blog
