--- a/jupyter-docs/_config.yml
+++ b/jupyter-docs/_config.yml
@@ -25,7 +25,7 @@ bibtex_bibfiles:
 # Information about where the book exists on the web
 repository:
   url: https://github.com/NicholasCote/CCPPdocs # Online location of your book
-  path_to_book: jupyter-docs/_build/html/  # Optional path to your book, relative to the repository root
+  path_to_book: jupyter-docs  # Optional path to your book, relative to the repository root
   branch: master  # Which branch of the repository should be used when creating links (optional)
 
 # Add GitHub buttons to your book
